--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ android {
     }
 
     kotlinOptions {
-        freeCompilerArgs += "-Xopt-in=kotlin.RequiresOptIn"
+        freeCompilerArgs += "-opt-in=kotlin.RequiresOptIn"
     }
 
     buildFeatures {
@@ -145,6 +145,9 @@ dependencies {
 
     // https://github.com/drfonfon/android-kotlin-geohash
     implementation 'com.github.drfonfon:android-kotlin-geohash:1.0'
+
+    // https://github.com/google/gson
+    implementation 'com.google.code.gson:gson:2.9.1'
 }
 
 ktlint {
