--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ buildscript {
 plugins {
     id("org.jlleitschuh.gradle.ktlint") version "10.2.1"
     id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.21'
 }
 
 allprojects {
