--- a/iosApp/Podfile
+++ b/iosApp/Podfile
@@ -1,9 +1,10 @@
 target 'iosApp' do
   use_frameworks!
-  platform :ios, '14.1'
+  platform :ios, '15'
   pod 'shared', :path => '../shared'
   pod("FirebaseAuth")
   pod("FirebaseDatabase")
   pod("FirebaseRemoteConfig")
   pod 'lottie-ios'
+  pod 'R.swift'
 end
