--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
         minSdkVersion 24
         targetSdkVersion 31
         versionCode 240100
-        versionName "Aberdeen Channel 1.0.0"
+        versionName "Lion Rock Tunnel 1.0.0"
     }
 
     buildTypes {
