--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ buildscript {
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.2'
         classpath 'com.squareup.sqldelight:gradle-plugin:1.5.3'
         classpath "dev.icerock.moko:resources-generator:0.20.1"
+        classpath 'com.codingfeline.buildkonfig:buildkonfig-gradle-plugin:0.13.3'
     }
 }
 
