--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,7 @@ android {
         debug {
             applicationIdSuffix '.debug'
             versionNameSuffix '-DEBUG'
-            buildConfigField "String", "GOOGLE_MAP_API_KEY", properties.getProperty('google_map.api_key')
-            resValue "string", "GOOGLE_MAP_API_KEY", properties.getProperty("google_map.api_key")
+            resValue "string", "GOOGLE_MAP_API_KEY", properties.getProperty("google_map.android.api_key")
             buildConfigField "String", "ADMOB_BANNER_ID", properties.getProperty('admob.banner_id')
             buildConfigField "String", "ADMOB_APP_ID", properties.getProperty("admob.app_id")
             resValue "string", "ADMOB_APP_ID", properties.getProperty("admob.app_id")
@@ -47,8 +46,7 @@ android {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            buildConfigField "String", "GOOGLE_MAP_API_KEY", properties.getProperty('google_map.api_key')
-            resValue "string", "GOOGLE_MAP_API_KEY", properties.getProperty("google_map.api_key")
+            resValue "string", "GOOGLE_MAP_API_KEY", properties.getProperty("google_map.android.api_key")
             buildConfigField "String", "ADMOB_BANNER_ID", properties.getProperty('admob.banner_id')
             buildConfigField "String", "ADMOB_APP_ID", properties.getProperty("admob.app_id")
             resValue "string", "ADMOB_APP_ID", properties.getProperty("admob.app_id")
